tests/paczka1/fuzzy1/77140140.err
Error in line 7: 3ellNm S514 34,2
Error in line 10: S514 A858 19,6
Error in line 29: 3ellNm A620 67,3
